--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,8 @@
 
     <!-- ProjectFragment 元素 -->
     <string name="btn_add_prj">添加工程</string>
+    <string name="et_hint">输入工程名以添加工程</string>
+
+    <string name="toast_add_prj_no_title">请先输入工程名！</string>
 
 </resources>
