--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_offline">离线下载地图</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -13,6 +13,7 @@
     <string name="menu_project">工程管理</string>
     <string name="menu_map">地图视图</string>
     <string name="menu_point">坐标列表</string>
+    <string name="menu_about">关于</string>
 
     <!-- ProjectFragment 元素 -->
     <string name="btn_add_prj">添加工程</string>
